# qiskit-research

./: .buildinfo  .gitignore  .pylintrc  .zenodo.json  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Pipfile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/apidocs/: index.doctree  mzm_generation.doctree  utils.doctree
.doctrees/mzm_generation/: analysis.doctree  data-collection.doctree  index.doctree  tutorial.doctree
.doctrees/protein_folding/: index.doctree  protein_folding.doctree
.doctrees/tutorial_quantum_sim/: index.doctree  qsim-tight-binding-model.doctree
.github/workflows/: coverage.yml  docs.yml  format.yml  lint.yml  mypy.yml  publish-to-pypi.yml  test_development_versions.yml  test_latest_versions.yml  test_minimum_versions.yml
_modules/: index.html
_sources/: index.rst.txt
_sources/mzm_generation/: data-collection.ipynb.txt  index.rst.txt
_sources/protein_folding/: index.rst.txt
_static/: documentation_options.js
apidocs/: index.html  mzm_generation.html  utils.html
best-practices/: best-practices.ipynb
check/: format-notebooks
docs/: beginners_guide.md  best-practices.ipynb  conf.py  dd_example.ipynb  dynamical_decoupling.ipynb  file-map-and-description.md  getting_started.ipynb  helper.py  index.rst  meas_cals_q[11, 8, 14, 16].json  pauli_twirl_example.ipynb  pauli_twirling.ipynb  project_overview.md  pulse_scaling.ipynb  quickstart_guide.md  technical_docs.md  zenodo-integration.md
docs/apidocs/: index.rst  mzm_generation.rst  utils.rst
docs/how_tos/: example_how_to.ipynb
docs/linear_solvers/: hhl_tutorial.ipynb
docs/mzm_generation/: analysis.ipynb  data-collection.ipynb  index.rst  tutorial.ipynb
docs/protein_folding/: index.rst  protein_folding.ipynb
docs/tutorial_quantum_sim/: index.rst  qsim-tight-binding-model.ipynb
docs/tutorials/: example_tutorial.ipynb
docs/vqls/: index.rst  run_runtime_program.py  vqls.ipynb  vqls_runtime.ipynb
mzm-generation/: analysis.ipynb  analysis.py  data-collection.ipynb  experiment.py  mzm-generation-new.ipynb  mzm-generation.ipynb  mzm_generation.py  requirements.txt  yx_plus_xy_interaction.py
mzm_generation/: analysis.html  analysis.ipynb  data-collection.html  data-collection.ipynb  index.html  tutorial.html  tutorial.ipynb
protein_folding/: index.html  protein_folding.html  protein_folding.ipynb
qiskit_research/: __init__.py
qiskit_research/DSV/: VD_qamp [Auto-saved].pptx  VD_qamp.pptx  dual_state_verification.py  tutorial_DSV .ipynb  tutorial_DSV.ipynb
qiskit_research/linear_solvers/: __init__.py  hhl.py  linear_solver.py  numpy_linear_solver.py
qiskit_research/mzm_generation/: __init__.py  analysis.py  experiment.py  phased_xx_minus_yy.py  test_phased_xx_minus_yy.py  test_utils.py  utils.py
qiskit_research/protein_folding/: __init__.py  penalty_parameters.py  protein_folding_problem.py  protein_folding_result.py  qubit_op_builder.py  residue_validator.py  sampling_problem.py
qiskit_research/utils/: __init__.py  backend.py  convenience.py  cost_funcs.py  dynamical_decoupling.py  gate_decompositions.py  gates.py  passes.py  (+8 more)
tutorial_quantum_sim/: index.html  qsim-tight-binding-model.html  qsim-tight-binding-model.ipynb
(+106 files in other folders)
