[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "qiskit-research"
version = "0.0.3"
description = "Research using Qiskit, demonstrating best practices for running quantum computing experiments."
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Physics",
]

requires-python = ">=3.8"

dependencies = [
    "qiskit==1.1.1",
    "qiskit-aer",
    "qiskit-ibm-runtime",
]

[project.optional-dependencies]
dev = [
    "black[jupyter]",
    "coverage",
    "ddt",
    "importlib_metadata",
    "mypy",
    "jupyter-sphinx",
    "nbmake",
    "nbsphinx",
    "pylint",
    "pytest",
    "qiskit[visualization]",
    "qiskit_sphinx_theme",
    "sphinx-autodoc-typehints",
]

[tool.autoflake]
remove-unused-variables = true
imports = ["qiskit", "qiskit_aer", "qiskit_nature", "qiskit_ibm_runtime"]
