[metadata]
name = qiskit-research
version = 0.0.0

[options]
packages = find:
install_requires =
    mthree
    pylatexenc
    qiskit-experiments @ git+https://github.com/Qiskit/qiskit-experiments.git#egg=qiskit-experiments
    qiskit-ibmq-provider
    qiskit-nature @ git+https://github.com/kevinsung/qiskit-nature.git@slater-determinants#egg=qiskit-nature
    qiskit-terra @ git+https://github.com/Qiskit/qiskit-terra.git#egg=qiskit-terra
